@@ -1,0 +1,58 @@
+/*
+ * Copyright (C) 2013 Apple Inc. All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY APPLE INC. AND ITS CONTRIBUTORS ``AS IS''
+ * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+ * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+ * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL APPLE INC. OR ITS CONTRIBUTORS
+ * BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+ * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+ * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+ * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
+ * THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+#ifndef StorageAreaProxy_h
+#define StorageAreaProxy_h
+
+#include <WebCore/StorageArea.h>
+
+namespace WebKit {
+
+class StorageAreaProxy : public WebCore::StorageArea {
+public:
+    static PassRefPtr<StorageAreaProxy> create();
+    virtual ~StorageAreaProxy();
+
+private:
+    StorageAreaProxy();
+
+    // WebCore::StorageArea.
+    virtual unsigned length(WebCore::ExceptionCode&, WebCore::Frame* sourceFrame) const OVERRIDE;
+    virtual String key(unsigned index, WebCore::ExceptionCode&, WebCore::Frame* sourceFrame) const OVERRIDE;
+    virtual String getItem(const String& key, WebCore::ExceptionCode&, WebCore::Frame* sourceFrame) const OVERRIDE;
+    virtual void setItem(const String& key, const String& value, WebCore::ExceptionCode&, WebCore::Frame* sourceFrame) OVERRIDE;
+    virtual void removeItem(const String& key, WebCore::ExceptionCode&, WebCore::Frame* sourceFrame) OVERRIDE;
+    virtual void clear(WebCore::ExceptionCode&, WebCore::Frame* sourceFrame) OVERRIDE;
+    virtual bool contains(const String& key, WebCore::ExceptionCode&, WebCore::Frame* sourceFrame) const OVERRIDE;
+    virtual bool canAccessStorage(WebCore::Frame*) const OVERRIDE;
+    virtual size_t memoryBytesUsedByCache() const OVERRIDE;
+    virtual void incrementAccessCount() OVERRIDE;
+    virtual void decrementAccessCount() OVERRIDE;
+    virtual void closeDatabaseIfIdle() OVERRIDE;
+};
+
+} // namespace WebKit
+
+#endif // StorageAreaProxy_h
